[package]
name = "thinkingroot-rooting"
version = "0.9.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
rust-version = { workspace = true }
description = "Deterministic admission gate for derived knowledge claims — the Rooting primitive."

[dependencies]
thinkingroot-core = { workspace = true }
thinkingroot-graph = { workspace = true }
thinkingroot-ground = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
regex = { workspace = true }
ulid = { workspace = true }
ordered-float = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = "0.24"
serde_json_path = "0.7"

[dev-dependencies]
tempfile = "3"
