[package]
name = "thinkingroot-serve"
description = "Stage 6: REST API and MCP server for ThinkingRoot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace        = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
keywords.workspace      = true
categories.workspace    = true
rust-version.workspace  = true

[features]
## Enable vector/semantic search. Disable with --no-default-features to build
## lightweight test binaries that don't link fastembed + ONNX Runtime.
default = ["vector"]
vector = ["thinkingroot-graph/vector", "thinkingroot-branch/vector", "thinkingroot-ground/vector"]

[dependencies]
thinkingroot-core = { workspace = true }
thinkingroot-graph = { workspace = true }
thinkingroot-branch = { workspace = true }
thinkingroot-parse = { workspace = true }
thinkingroot-extract = { workspace = true }
thinkingroot-link = { workspace = true }
thinkingroot-compile = { workspace = true }
thinkingroot-health = { workspace = true }
thinkingroot-ground = { workspace = true }
thinkingroot-rooting = { workspace = true }
thinkingroot-reflect = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
async-trait = "0.1"
regex = { workspace = true }
lru = "0.12"
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rand = { workspace = true }
hex = "0.4"
base64 = { workspace = true }

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower = { version = "0.5", features = ["util"] }
