[package]
name = "thinkingroot-serve"
description = "Stage 6: REST API and MCP server for ThinkingRoot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace        = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
keywords.workspace      = true
categories.workspace    = true
rust-version.workspace  = true

[features]
## Enable vector/semantic search. Disable with --no-default-features to build
## lightweight test binaries that don't link fastembed + ONNX Runtime.
default = ["vector"]
vector = ["thinkingroot-graph/vector", "thinkingroot-branch/vector"]
## Enable Sigstore keyless signing for the Grounded Diff Certificate
## (`intelligence::diff_cert::sign_statement_keyless`). Pulls in
## `sigstore-rs` + `reqwest` + `tokio` + `openidconnect` via
## `tr-sigstore/live`. Off by default — `cargo build` stays lean.
live = ["tr-sigstore/live"]
## Enable the Root Function executor (V8 isolate via `deno_core`). OFF
## by default so the desktop build + default CI never pay V8's build
## cost. The cloud `root serve` image builds with this enabled.
root-functions = ["dep:deno_core", "dep:deno_error"]

[dependencies]
thinkingroot-core = { workspace = true }
thinkingroot-graph = { workspace = true }
thinkingroot-branch = { workspace = true }
thinkingroot-pr = { workspace = true }
thinkingroot-parse = { workspace = true }
thinkingroot-extract = { workspace = true }
thinkingroot-llm = { workspace = true }
thinkingroot-flow = { workspace = true }
thinkingroot-paper = { workspace = true }
thinkingroot-link = { workspace = true }
thinkingroot-compile = { workspace = true }
thinkingroot-health = { workspace = true }
thinkingroot-reflect = { workspace = true }
thinkingroot-cloud-auth = { workspace = true }
tr-sigstore = { workspace = true }
blake3 = { workspace = true }
cozo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
ulid = { workspace = true }
url = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
rayon = "1"
async-trait = "0.1"
regex = { workspace = true }
lru = "0.12"
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rand = { workspace = true }
hex = "0.4"
base64 = { workspace = true }
tempfile = "3"

# Slice 3 — file-system watcher for workspace lifecycle events
# (`.thinkingroot/` removal, graph.db missing, config.toml modified).
# Workspace dep pinned at notify v8 to match the CLI's existing usage in
# `root compile --watch` so we have a single notify version across the
# tree.
notify = { workspace = true }
# Source-tree debouncer used by `workspace_watcher.rs` to coalesce
# rapid filesystem events (editor save bursts, batch imports) into
# one `WorkspaceEvent::SourceChanged` per quiet-window batch.
notify-debouncer-mini = { workspace = true }

# Phase D Wave 1 system-power tools (`system_power.rs`).
thinkingroot-sandbox = { workspace = true }
arboard = { workspace = true }
opener = { workspace = true }
trash = { workspace = true }
ignore = { workspace = true }
globset = { workspace = true }
# `dirs` resolves the canonical `permissions.toml` path under
# `<config_dir>/thinkingroot/`. Same crate the rest of the workspace
# already uses for cortex.lock / credentials.toml.
dirs = { workspace = true }
# E.5 (2026-05-17) — external MCP HTTP transport. `reqwest` was a
# dev-dep only until E.5 added a production HTTP MCP client; the
# feature set (json + rustls-tls) is what the existing dev-dep was
# already pinned to.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Constant-time comparison for bearer/API-key auth checks. Tiny
# (~6 KB), pure Rust, no_std. Closes the timing-side-channel class
# that `==` allows when comparing user-supplied secrets.
subtle = "2.6"
deno_core = { version = "0.402.0", optional = true }
deno_error = { version = "0.7", optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
cozo = { workspace = true }
thinkingroot-parse = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "incremental_smoke"
path = "benches/incremental_smoke.rs"
harness = false
