[package]
name = "tr-format"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Reader/writer for the v3 (`tr/3`) .tr portable knowledge pack format — three files (manifest.toml + source.tar.zst + claims.jsonl) plus an optional Sigstore signature.sig."

[lib]
name = "tr_format"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
# v3 manifest is TOML; reader uses serde-toml for parse, writer emits a
# manually-canonicalized TOML body so the byte ordering is locked at our
# source-of-truth function (D7 from the v3 implementation plan) rather
# than depending on upstream toml crate ordering decisions.
toml = { workspace = true }
# Sigstore bundle types and offline DSSE verification — used by the v3
# writer's `build_signed` and the v3 reader to expose a parsed
# `SigstoreBundle` to consumers.
tr-sigstore = { workspace = true }

# Direct deps — not in the OSS workspace's `[workspace.dependencies]`
# table today. Kept in sync with the cloud monorepo by version.
hex = "0.4"
semver = { version = "1", features = ["serde"] }
tar = "0.4"
zstd = { version = "0.13", features = ["zstdmt"] }
# Used by `V3PackBuilder::build_signed` — the signing key type comes
# in pre-loaded by the caller; tr-format never persists or generates
# keys itself.
ed25519-dalek = { workspace = true }

[dev-dependencies]
tempfile = "3"
