[package]
name = "tr-format"
# Witness Mesh cutover bumps tr-format to 1.0.0 (semver MAJOR) to signal
# the wire-format extension: `claims.jsonl` (v3) is joined by
# `witnesses.cbor` + `rule_catalog.toml` for `tr/3.2` packs that carry
# the new substrate. Consumers pinning 0.9.x read v3 packs only; 1.0.0
# consumers read both v3 and the new v3.2 shape. The workspace
# inheritance is intentionally overridden here — the other 21 in-tree
# crates remain on `version.workspace = true` (0.9.1).
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Reader/writer for the .tr portable knowledge pack format — v3 (`tr/3`: manifest.toml + source.tar.zst + claims.jsonl + optional signature.sig) + v3.2 Witness Mesh extension (witnesses.cbor + rule_catalog.toml)."

[lib]
name = "tr_format"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
# v3 manifest is TOML; reader uses serde-toml for parse, writer emits a
# manually-canonicalized TOML body so the byte ordering is locked at our
# source-of-truth function (D7 from the v3 implementation plan) rather
# than depending on upstream toml crate ordering decisions.
toml = { workspace = true }
# v3.2 Witness Mesh `witnesses.cbor` encoder — `ciborium` produces
# canonical CBOR (RFC 7049 §3.9 deterministic encoding: shortest int
# form, sorted map keys, no indefinite-length items). The
# `into_writer` path is byte-deterministic across processes given
# the same sorted input vec.
ciborium = "0.2"
# Sigstore bundle types and offline DSSE verification — used by the v3
# writer's `build_signed` and the v3 reader to expose a parsed
# `SigstoreBundle` to consumers.
tr-sigstore = { workspace = true }

# Direct deps — not in the OSS workspace's `[workspace.dependencies]`
# table today. Kept in sync with the cloud monorepo by version.
hex = "0.4"
semver = { version = "1", features = ["serde"] }
tar = "0.4"
zstd = { version = "0.13", features = ["zstdmt"] }
# Used by `V3PackBuilder::build_signed` — the signing key type comes
# in pre-loaded by the caller; tr-format never persists or generates
# keys itself.
ed25519-dalek = { workspace = true }

[dev-dependencies]
tempfile = "3"
