[package]
name = "tr-revocation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Client-side cache + verifier for the TR-1 revocation deny-list."

[lib]
name = "tr_revocation"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
dirs = { workspace = true }

ed25519-dalek = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
