[package]
name = "tr-sigstore"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Sigstore keyless OIDC signing + offline DSSE verification for v3 packs."

[lib]
name = "tr_sigstore"
path = "src/lib.rs"

# Default feature set is offline-first: pure Rust, no async runtime, no TLS.
# It supports BOTH self-signed Ed25519 bundles (default `verify_bundle_offline`
# path) AND Sigstore Fulcio-issued ECDSA P-256 cert bundles (cryptographic
# verification only — chain validation against a trust root lands in the
# follow-up commit). The `live` feature (W3.5) bolts on `sigstore-rs` +
# `tokio` + `reqwest` for the keyless OIDC sign flow; consumers that only
# verify never compile that surface.

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }

# ECDSA P-256 verification path — Fulcio issues ECDSA P-256 ephemeral certs
# by default, so any Sigstore-signed bundle the verifier consumes carries an
# ECDSA P-256 leaf cert. `p256` is the RustCrypto curve impl; `ecdsa` provides
# the DER-encoded signature parser; `x509-cert` parses the leaf cert's
# SubjectPublicKeyInfo so we can reconstruct the verifying key. All three
# track the same `signature 2` + `der 0.7` + `spki 0.7` ecosystem versions
# already in our workspace lockfile (via tr-revocation + ed25519-dalek).
p256       = { version = "0.13", default-features = false, features = ["ecdsa", "pkcs8", "std"] }
ecdsa      = { version = "0.16", default-features = false, features = ["der", "pkcs8", "std"] }
x509-cert  = { version = "0.2",  default-features = false, features = ["std"] }
spki       = { version = "0.7",  default-features = false, features = ["std"] }
der        = { version = "0.7",  default-features = false, features = ["std", "oid", "pem"] }
signature  = { version = "2",    default-features = false, features = ["std"] }
# SHA-256 hashing for TBS-cert signature verification during chain
# validation. Sigstore's Fulcio chain is exclusively ECDSA-with-SHA256;
# adding other hash variants is straightforward when needed.
sha2       = { version = "0.10", default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { workspace = true }
# Tests hand-roll syntactically valid X.509 certs (TBS + signature)
# rather than going through `x509-cert::builder`, because the builder's
# `Builder` trait bounds aren't satisfied for our exact ecdsa+pkcs8
# feature set. Hand-rolling keeps the test deps minimal and gives the
# chain-validation tests precise control over each cert's TBS bytes.
