[package]
name = "tr-verify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Public trust-verification API for `.tr` packs (T0/T1; T2+ Sigstore arrives in Step 4b)."

[lib]
name = "tr_verify"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }

tr-format = { workspace = true }
tr-revocation = { workspace = true }
tr-sigstore = { workspace = true }

ed25519-dalek = { workspace = true }
# Type-only dep — we name `p256::ecdsa::VerifyingKey` in the keyless
# verification helper that sits between `tr_sigstore`'s rekor public-
# key constructor and its SET-verification function. Same version
# `tr-sigstore` already pulls in.
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "pkcs8", "std"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
semver = { version = "1", features = ["serde"] }
